--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.2",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.516.0",
     "react": "^19.1.0",
